[gd_scene load_steps=9 format=2]

[ext_resource path="res://blocks/Hittable.tscn" type="PackedScene" id=1]
[ext_resource path="res://blocks/HitableBrick.gd" type="Script" id=2]
[ext_resource path="res://texture/blocks/brick.tres" type="Texture" id=3]
[ext_resource path="res://sound/smb_bump.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/smb_breakblock.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]

[sub_resource type="Animation" id=3]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, -6 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}

[node name="Hitable" instance=ExtResource( 1 )]
collision_mask = 30
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="." index="1"]
visible = false
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
shape = SubResource( 1 )

[node name="animation" type="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 3 )

[node name="hit_break" type="AudioStreamPlayer2D" parent="." index="4"]
position = Vector2( 0, -8 )
stream = ExtResource( 5 )

[node name="hit_brick" type="AudioStreamPlayer2D" parent="." index="5"]
position = Vector2( 0, -8 )
stream = ExtResource( 4 )
